--- a/src/css/apps/user/sqeleton.css
+++ b/src/css/apps/user/sqeleton.css
@@ -2,6 +2,7 @@
 @import url("./sqeleton/layout.css");
 @import url("./sqeleton/sidebar.css");
 @import url("./sqeleton/bottompane.css");
+@import url("./sqeleton/statusbar.css");
 #Sqeleton > div.body {
   padding: 0;
 }
