Continue working on Sqeleton

--- a/src/css/apps/user/sqeleton.css
+++ b/src/css/apps/user/sqeleton.css
@@ -1,6 +1,7 @@
 @import url("./sqeleton/intro.css");
 @import url("./sqeleton/layout.css");
 @import url("./sqeleton/sidebar.css");
+@import url("./sqeleton/actionbar.css");
 @import url("./sqeleton/bottompane.css");
 @import url("./sqeleton/statusbar.css");
 #Sqeleton > div.body {
