--- a/src/css/apps/user/sqeleton/layout.css
+++ b/src/css/apps/user/sqeleton/layout.css
@@ -6,14 +6,12 @@
 }
 
 #Sqeleton > div.body div.main-content div.sidebar {
-  width: 250px;
+  width: 100%;
   height: 100%;
 }
 
 #Sqeleton > div.body div.main-content div.editor {
-  border-left: var(--win-border);
-  width: 0;
-  flex-grow: 1;
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -28,11 +26,10 @@
   height: 40px;
 }
 
-#Sqeleton > div.body div.main-content div.editor > div.code-editor-wrapper {
+#Sqeleton > div.body div.main-content div.editor div.code-editor-wrapper {
   height: 0;
   flex-grow: 1;
   border-top: var(--win-border);
-  border-bottom: var(--win-border);
 }
 
 #Sqeleton > div.body div.main-content div.editor.maximize-bottom > div.code-editor-wrapper {
@@ -40,11 +37,24 @@
 }
 
 #Sqeleton > div.body div.main-content div.bottom-pane {
-  height: 250px;
+  height: 100%;
 }
 
 #Sqeleton > div.body div.status-bar {
   height: 26px;
   display: flex;
   align-items: center;
+}
+
+#Sqeleton > div.body div.splitpanes__pane {
+  display: flex;
+}
+
+#Sqeleton > div.body div.editor div.splitpanes__pane {
+  flex-direction: column;
+}
+
+#Sqeleton > div.body p.empty {
+  padding: 0 17px;
+  opacity: 0.5;
 }
