--- a/src/css/apps/user/sqeleton/sidebar.css
+++ b/src/css/apps/user/sqeleton/sidebar.css
@@ -14,6 +14,10 @@
   margin-bottom: 5px;
 }
 
+#Sqeleton > div.body div.sidebar > details > summary {
+  margin-bottom: 5px;
+}
+
 #Sqeleton > div.body div.sidebar details {
   width: 100%;
 }
@@ -116,6 +120,7 @@
   text-overflow: ellipsis;
   text-align: left;
   white-space: nowrap;
+  font-size: 12px;
 }
 
 #Sqeleton > div.body div.sidebar div.query button:not(.lucide) {
@@ -129,6 +134,7 @@
   outline: none;
   background-color: transparent;
   padding: 2px 0;
+  padding-left: 17px;
 }
 
 #Sqeleton > div.body div.sidebar div.query > button.lucide {
