--- a/src/css/state/arcterm.css
+++ b/src/css/state/arcterm.css
@@ -2,9 +2,9 @@
   position: fixed;
   top: 0px;
   left: 0px;
-  width: 100%;
-  height: 100%;
-  padding: 7px;
+  width: calc(100% - 14px);
+  height: calc(100% - 14px);
+  margin: 7px;
 }
 
 #arcTermMode * {
