CSS UI improvements and bugfixes

--- a/src/css/apps/components/appinfo.css
+++ b/src/css/apps/components/appinfo.css
@@ -122,6 +122,10 @@
   margin-left: auto;
 }
 
+#AppInfo div.info-block.process-info div.row {
+  padding-right: 10px;
+}
+
 #AppInfo div.info-block.internal-info {
   margin-bottom: 20px;
 }
