--- a/src/css/apps/components/shell/taskbar.css
+++ b/src/css/apps/components/shell/taskbar.css
@@ -15,18 +15,16 @@ div.shell div.taskbar {
   box-shadow: var(--secondary-box-shadow);
   backdrop-filter: blur(var(--blur));
   -webkit-backdrop-filter: blur(var(--blur));
-  transition: translate 0.3s;
+  transition:
+    translate 0.3s,
+    opacity 0.3s,
+    margin-top 0.3s;
   translate: 0 70px;
   animation: arcShell_taskbar_appear 0.3s cubic-bezier(0.075, 0.82, 0.165, 1) forwards;
-  animation-delay: 1000ms;
 }
 
 div.shell.docked div.taskbar.shell-colored::before {
   border-radius: 0;
-}
-
-div.shell.has-fullscreen div.taskbar {
-  translate: 0 70px;
 }
 
 :root #main:has(#arcShell div.shell) {
@@ -59,6 +57,8 @@ div.shell.docked div.taskbar {
   background-color: var(--button-glass-bg);
   font-size: 18px;
   border-radius: 10px;
+  outline: var(--button-glass-bg) 1px solid;
+  outline-offset: -1px;
 }
 
 #arcShell div.shell div.taskbar > button:hover {
@@ -96,6 +96,8 @@ div.shell div.taskbar div.tray-icons {
   align-items: center;
   padding: 0 15px;
   border-radius: 10px;
+  outline: var(--button-glass-bg) 1px solid;
+  outline-offset: -1px;
 }
 
 div.shell div.taskbar div.tray-icons {
@@ -232,4 +234,8 @@ div.shell div.taskbar div.pinned-apps > button + button {
   100% {
     translate: 0;
   }
+}
+
+div.shell.has-fullscreen div.taskbar {
+  translate: 0 70px !important;
 }
