--- a/src/css/apps/user/settings/slide/manageapps.css
+++ b/src/css/apps/user/settings/slide/manageapps.css
@@ -28,6 +28,8 @@
   border-radius: 8px;
   height: 30px;
   flex-grow: 1;
+  outline: var(--button-glass-bg) 1px solid;
+  outline-offset: -1px;
 }
 #systemSettings div.apps_manageApps div.options div.search span.lucide {
   opacity: 0.5;
@@ -46,6 +48,8 @@
   padding: 0 10px;
   border: none;
   background-color: var(--button-bg);
+  outline: var(--button-glass-bg) 1px solid;
+  outline-offset: -1px;
 }
 #systemSettings div.apps_manageApps div.apps {
   display: grid;
