Update the appearance of the blur radius setting

--- a/src/css/apps/user/settings.css
+++ b/src/css/apps/user/settings.css
@@ -6,6 +6,7 @@
 @import url("./settings/page/wallpaper.css");
 @import url("./settings/page/security.css");
 @import url("./settings/page/loginbackground.css");
+@import url("./settings/page/visuals.css");
 @import url("./settings/page/about.css");
 @import url("./settings/page/apps.css");
 @import url("./settings/overlay/savetheme.css");
