--- a/src/css/window/fields.css
+++ b/src/css/window/fields.css
@@ -28,3 +28,14 @@ div.window.glass > div.body select.flat {
 div.window.glass > div.body select.compact {
   padding: 0 5px;
 }
+
+div.window > div.body input.no-arrows::-webkit-outer-spin-button,
+div.window > div.body input.no-arrows::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+div.window > div.body input.no-arrows[type="number"] {
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
