Change the right padding of the blur-radius setting

--- a/src/css/apps/user/settings/page/visuals.css
+++ b/src/css/apps/user/settings/page/visuals.css
@@ -1,3 +1,6 @@
+#systemSettings > div.body div.visuals div.blur-radius {
+  padding-right: 5px;
+}
 #systemSettings > div.body div.visuals div.blur-radius div.right {
   display: flex;
   align-items: center;
