--- a/src/css/apps/components/shell/startmenu/bottom.css
+++ b/src/css/apps/components/shell/startmenu/bottom.css
@@ -8,6 +8,8 @@ div.shell div.startmenu div.bottom {
   padding: 10px 15px;
   gap: 10px;
   box-shadow: var(--secondary-box-shadow);
+  outline: var(--button-glass-hover-bg) 1px solid;
+  outline-offset: -1px;
 }
 
 div.shell div.startmenu div.bottom span.lucide {
