--- a/src/css/apps/components/shell/workspaces.css
+++ b/src/css/apps/components/shell/workspaces.css
@@ -48,6 +48,8 @@
   background-image: var(--wallpaper);
   background-position: center;
   background-size: cover;
+  outline: var(--button-glass-bg) 1px solid;
+  outline-offset: -1px;
 }
 
 #arcShell div.virtual-desktops button.desktop.selected {
@@ -70,7 +72,8 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   border-radius: 5px;
-
+  outline: var(--button-glass-bg) 1px solid;
+  outline-offset: -1px;
   margin-left: auto;
 }
 
@@ -84,6 +87,8 @@
 
 #arcShell div.virtual-desktops button.desktop div.bottom > div {
   background-color: var(--glass-bg);
+  outline: var(--button-glass-bg) 1px solid;
+  outline-offset: -1px;
   backdrop-filter: blur(10px);
   padding: 2px 5px;
   border-radius: 4px;
@@ -113,6 +118,8 @@
   background-color: var(--button-glass-bg);
   /* box-shadow: var(--secondary-box-shadow); */
   font-size: 24px;
+  outline: var(--button-glass-bg) 1px solid;
+  outline-offset: -1px;
 }
 
 #arcShell div.virtual-desktops button.add:hover {
