--- a/src/css/apps/admin/adminportal/page/store.css
+++ b/src/css/apps/admin/adminportal/page/store.css
@@ -187,7 +187,7 @@
   width: 16px;
   border-radius: 2px;
 }
-
+#AdminPortal div.container.store div.item-row div.segment.size,
 #AdminPortal div.container.store div.item-row div.segment.version {
   width: 60px;
 }
