Begin working on the app store user page

--- a/src/css/apps/user/appstore.css
+++ b/src/css/apps/user/appstore.css
@@ -4,6 +4,7 @@
 @import url("./appstore/page/managestoreitem.css");
 @import url("./appstore/page/everything.css");
 @import url("./appstore/page/viewstoreitem.css");
+@import url("./appstore/page/userpage.css");
 @import url("./appstore/installaction.css");
 @import url("./appstore/tpadisabled.css");
 
